@@ -222,7 +222,8 @@
         				<outputEncoding>UTF-8</outputEncoding>
 				<configuration>
 					<!-- permet la surcharge de maven-surefire-plugin tout en fonctionnant avec jacoco -->
-					<argLine>@{argLine} -Dfile.encoding=UTF-8</argLine>
+					<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea
+        						-Dfile.encoding=UTF-8</argLine>
 				</configuration>
     			</configuration>
 
